# LinuxApplicationDevelopment2023

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: 1.gdb  2.gdb  Makefile  range  range.c
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  myUnlink.c  tests.sh
07_Environmental/: CMakeLists.txt  README.md  rhasher.c
08_I18n/: CMakeLists.txt  README.md  guesser.c  guesser.po
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  grow_test.c  init_test.c  pop_test.c  push_test.c  test.h  zero_test.c
